Created the about section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
       <section class="about-section">
 
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="secondary-title">
             Adventure Tours In Scandinavia
           </h2>
@@ -35,10 +35,23 @@
 
         <div class="row">
           <div class="col-1-of-2">
-            SOME TEXT
+            <h3 class="terciary-title u-margin-bottom-small">Amazing nature with great landscapes</h3>
+            <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur laboriosam, ex facilis modi ipsum enim laudantium necessitatibus laborum velit nesciunt maxime voluptate porro, cumque cupiditate. Itaque cupiditate necessitatibus officiis magnam.
+            </p>
+
+            <h3 class="terciary-title u-margin-bottom-small">Amazing nature with great landscapes</h3>
+            <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur laboriosam, ex facilis modi
+              ipsum enim laudantium necessitatibus laborum velit nesciunt maxime voluptate porro, cumque cupiditate. Itaque
+              cupiditate necessitatibus officiis magnam.
+            </p>
+            <a href="#" class="btn-text">Learn more &rarr;</a>
           </div>
           <div class="col-1-of-2">
-            IMAGES
+            <div class="composition">
+              <img src="img/nord-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+              <img src="img/nord-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+              <img src="img/nord-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+            </div>
           </div>
         </div>
 
