--- a/index.html
+++ b/index.html
@@ -118,7 +118,23 @@
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
-                FRONT
+                <div class="card__picture card__picture--1">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--1">
+                    the glaciar explorer
+                  </span> 
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>4 day tour</li>
+                    <li>Up to 10 people</li>
+                    <li>2 tour guides</li>
+                    <li>Sleep in cozy hotels</li>
+                    <li>Difficulty: easy</li>
+                  </ul>
+                </div>
               </div>
               <div class="card__side card__side--back card__side--back-1">
                 BACK
@@ -129,7 +145,15 @@
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
-                FRONT
+                <div class="card__picture card__picture--2">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  HEADING
+                </h4>
+                <div class="card__details">
+                  DETAILS
+                </div>
               </div>
               <div class="card__side card__side--back card__side--back-2">
                 BACK
@@ -140,7 +164,15 @@
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
-                FRONT
+                <div class="card__picture card__picture--3">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  HEADING
+                </h4>
+                <div class="card__details">
+                  DETAILS
+                </div>
               </div>
               <div class="card__side card__side--back card__side--back-3">
                 BACK
