--- a/index.html
+++ b/index.html
@@ -123,21 +123,28 @@
                 </div>
                 <h4 class="card__heading">
                   <span class="card__heading-span card__heading-span--1">
-                    the glaciar explorer
+                    the mountain adventure
                   </span> 
                 </h4>
                 <div class="card__details">
                   <ul>
+                    <li>Norway</li>
                     <li>4 day tour</li>
                     <li>Up to 10 people</li>
                     <li>2 tour guides</li>
-                    <li>Sleep in cozy hotels</li>
-                    <li>Difficulty: easy</li>
+                    <li>Sleep in cozy shelters</li>
+                    <li>Difficulty: Easy</li>
                   </ul>
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back-1">
-                BACK
+                <div class="card__call-to-action">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$399</p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book Now!</a>
+                </div>
               </div>
             </div>
           </div>
@@ -149,14 +156,29 @@
                   &nbsp;
                 </div>
                 <h4 class="card__heading">
-                  HEADING
+                  <span class="card__heading-span card__heading-span--2">
+                    the ice adventure
+                  </span>
                 </h4>
                 <div class="card__details">
-                  DETAILS
+                  <ul>
+                    <li>Iceland</li>
+                    <li>3 day tour</li>
+                    <li>Up to 7 people</li>
+                    <li>1 tour guide</li>
+                    <li>Sleep in cozy shelters</li>
+                    <li>Difficulty: Medium</li>
+                  </ul>
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back-2">
-                BACK
+                <div class="card__call-to-action">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$599</p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book Now!</a>
+                </div>
               </div>
             </div>
           </div>
@@ -168,20 +190,38 @@
                   &nbsp;
                 </div>
                 <h4 class="card__heading">
-                  HEADING
+                  <span class="card__heading-span card__heading-span--3">
+                    the lake adventure
+                  </span>
                 </h4>
                 <div class="card__details">
-                  DETAILS
+                  <ul>
+                    <li>Sweden</li>
+                    <li>7 day tour</li>
+                    <li>Up to 20 people</li>
+                    <li>4 tour guides</li>
+                    <li>Sleep in cozy shelters</li>
+                    <li>Difficulty: Hard</li>
+                  </ul>
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back-3">
-                BACK
+                <div class="card__call-to-action">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$899</p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book Now!</a>
+                </div>
               </div>
             </div>
           </div>
 
         </div>
 
+        <div class="u-center-text u-margin-top-xl">
+          <a href="#" class="btn btn--blue">Check All Tours</a>
+        </div>
       </section>
     </main>
 
