--- a/index.html
+++ b/index.html
@@ -223,6 +223,28 @@
           <a href="#" class="btn btn--blue">Check All Tours</a>
         </div>
       </section>
+
+      <section class="section-reviews">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="secondary-title">
+            What our customers have to say
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="review">
+            <figure class="review__shape">
+              <img class="review__image" src="img/nord-8.jpg" alt="Person on Tour">
+            </figure>
+            <div class="review__text">
+              <h3 class="terciary-title u-margin-bottom-small">The best adventure of my life</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At numquam tempore libero asperiores doloremque minima laboriosam unde laborum facilis totam nam, explicabo eum accusantium odio molestias ratione soluta impedit deserunt, porro error? Tempora rem quidem est ad expedita architecto et?
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
 </body>
