Styles for the review section are completed

--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
           <div class="review">
             <figure class="review__shape">
               <img class="review__image" src="img/nord-8.jpg" alt="Person on Tour">
+              <figcaption class="review__caption">John Thomas</figcaption>
             </figure>
             <div class="review__text">
               <h3 class="terciary-title u-margin-bottom-small">The best adventure of my life</h3>
@@ -243,6 +244,27 @@
               </p>
             </div>
           </div>
+        </div>
+
+        <div class="row">
+          <div class="review">
+            <figure class="review__shape">
+              <img class="review__image" src="img/nord-9.jpg" alt="Person on Tour">
+              <figcaption class="review__caption">Ann Williams</figcaption>
+            </figure>
+            <div class="review__text">
+              <h3 class="terciary-title u-margin-bottom-small">I really enjoyed this trip!</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At numquam tempore libero asperiores doloremque minima
+                laboriosam unde laborum facilis totam nam, explicabo eum accusantium odio molestias ratione soluta impedit
+                deserunt, porro error? Tempora rem quidem est ad expedita architecto et?
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-xl">
+          <a href="#" class="btn-text">Read All Reviews &rarr;</a>
         </div>
       </section>
     </main>
