Implemented background video on the reviews section

--- a/index.html
+++ b/index.html
@@ -225,6 +225,13 @@
       </section>
 
       <section class="section-reviews">
+        <div class="background-video">
+          <video class="background-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4">
+            <source src="img/video.webm" type="video/webm">
+            Your Browser is not supported!
+          </video>
+        </div>
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="secondary-title">
             What our customers have to say
