--- a/index.html
+++ b/index.html
@@ -274,6 +274,31 @@
           <a href="#" class="btn-text">Read All Reviews &rarr;</a>
         </div>
       </section>
+
+      <section class="section-booking">
+        <div class="row">
+          <div class="booking">
+            <div class="booking__form">
+              <form action="#" class="form">
+                <div class="u-margin-bottom-medium">
+                  <h2 class="secondary-title">
+                    Start booking now
+                  </h2>
+                </div>
+                <div class="form__group">
+                  <input type="text" class="form__input" placeholder="Full Name" id="name" required>
+                  <label for="name" class="form__label">Full Name</label>
+                </div>
+
+                <div class="form__group">
+                  <input type="email" class="form__input" placeholder="Email Address" id="email" required>
+                  <label for="email" class="form__label">Email Address</label>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
 </body>
