--- a/index.html
+++ b/index.html
@@ -322,5 +322,29 @@
       </section>
     </main>
 
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img class="footer__logo" src="img/logo-blue.png" alt="footer logo">
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Contact Us</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Built by <a href="#" class="footer__link">Edgardo Pinto-Escalier</a> for a real customer. Copyright &copy; by Edgardo Pinto-Escalier.
+          </p>
+        </div>
+      </div>
+    </footer>
+
 </body>
 </html>
