--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
   <title>Nordic Outdoors | Adventure Tours In The North</title>
 </head>
 <body>
+  <div class="navigation">
+    <input type="checkbox" class="navigation__checkbox" id="navigation-toggle">
+    <label for="navigation-toggle" class="navigation__button">MENU</label>
+    <div class="navigation__background">&nbsp;</div>
+    <nav class="navigation__nav">
+      <ul class="navigation__list">
+        <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Us</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Popular Tours</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Customer Reviews</a></li>
+        <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Book Your Tour</a></li>
+      </ul>
+    </nav>
+  </div>
     <header class="page-header">
       <div class="page-header__logo-container">
         <img class="page-header__logo" src="img/logo-white.png" alt="main logo">
