Created a modal popup window and added styles to it

--- a/index.html
+++ b/index.html
@@ -355,11 +355,32 @@
         </div>
         <div class="col-1-of-2">
           <p class="footer__copyright">
-            Built by <a href="#" class="footer__link">Edgardo Pinto-Escalier</a> for a real customer. Copyright &copy; by Edgardo Pinto-Escalier.
+            Built by <a href="#" class="footer__link">&nbsp;Edgardo Pinto-Escalier</a>&nbsp;&nbsp;for a real customer. Copyright &copy; 2020 by Edgardo Pinto-Escalier.
           </p>
         </div>
       </div>
     </footer>
+
+    <div class="modal">
+      <div class="modal__content">
+        <div class="modal__left">
+          <img class="modal__image" src="img/nord-8.jpg" alt="Tour Picture">
+          <img class="modal__image" src="img/nord-9.jpg" alt="Tour Picture">
+        </div>
+        <div class="modal__right">
+          <h2 class="secondary-title u-margin-bottom-small">Book your adventure now</h2>
+          <h3 class="terciary-title u-margin-bottom-small">Important &ndash; Make sure to read the terms before booking.</h3>
+          <p class="modal__text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+            dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+            book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
+            unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+            recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          </p>
+          <a href="#" class="btn btn--blue">Book Now</a>
+        </div>
+      </div>
+    </div>
 
 </body>
 </html>
