--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$399</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book Now!</a>
+                  <a href="#modal" class="btn btn--white">Book Now!</a>
                 </div>
               </div>
             </div>
@@ -192,7 +192,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$599</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book Now!</a>
+                  <a href="#modal" class="btn btn--white">Book Now!</a>
                 </div>
               </div>
             </div>
@@ -226,7 +226,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$899</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book Now!</a>
+                  <a href="#modal" class="btn btn--white">Book Now!</a>
                 </div>
               </div>
             </div>
@@ -361,13 +361,14 @@
       </div>
     </footer>
 
-    <div class="modal">
+    <div class="modal" id="modal">
       <div class="modal__content">
         <div class="modal__left">
           <img class="modal__image" src="img/nord-8.jpg" alt="Tour Picture">
           <img class="modal__image" src="img/nord-9.jpg" alt="Tour Picture">
         </div>
         <div class="modal__right">
+          <a href="#section-tours" class="modal__close">&times;</a>
           <h2 class="secondary-title u-margin-bottom-small">Book your adventure now</h2>
           <h3 class="terciary-title u-margin-bottom-small">Important &ndash; Make sure to read the terms before booking.</h3>
           <p class="modal__text">
