Did optimize images, added them to an image CDN, implement media query logic to show different image sizes depending screen resolution

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
           </div>
           <div class="col-1-of-2">
             <div class="composition">
-              <img src="img/nord-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
-              <img src="img/nord-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
-              <img src="img/nord-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+              <img src="https://i.ibb.co/zf5V1Kd/nord-1.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+              <img src="https://i.ibb.co/WyZ0YNY/nord-2.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+              <img src="https://i.ibb.co/xDr9WXy/nord-3.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
             </div>
           </div>
         </div>
@@ -256,7 +256,7 @@
         <div class="row">
           <div class="review">
             <figure class="review__shape">
-              <img class="review__image" src="img/nord-8.jpg" alt="Person on Tour">
+              <img class="review__image" src="https://i.ibb.co/3WbRrcF/nord-8.jpg" alt="Person on Tour">
               <figcaption class="review__caption">John Thomas</figcaption>
             </figure>
             <div class="review__text">
@@ -271,7 +271,7 @@
         <div class="row">
           <div class="review">
             <figure class="review__shape">
-              <img class="review__image" src="img/nord-9.jpg" alt="Person on Tour">
+              <img class="review__image" src="https://i.ibb.co/PzVCCw3/nord-9.jpg" alt="Person on Tour">
               <figcaption class="review__caption">Ann Williams</figcaption>
             </figure>
             <div class="review__text">
@@ -364,8 +364,8 @@
     <div class="modal" id="modal">
       <div class="modal__content">
         <div class="modal__left">
-          <img class="modal__image" src="img/nord-8.jpg" alt="Tour Picture">
-          <img class="modal__image" src="img/nord-9.jpg" alt="Tour Picture">
+          <img class="modal__image" src="https://i.ibb.co/3WbRrcF/nord-8.jpg" alt="Tour Picture">
+          <img class="modal__image" src="https://i.ibb.co/PzVCCw3/nord-9.jpg" alt="Tour Picture">
         </div>
         <div class="modal__right">
           <a href="#section-tours" class="modal__close">&times;</a>
