--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-  <link rel="stylesheet" href="css/icon-font.css">
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&display=swap"" rel="stylesheet">
+  <link rel="preload" as="font" href="css/fonts/linea-basic-10.woff" type="font/woff" crossorigin="anonymous">
+  <!--<link rel="stylesheet preload" href="css/icon-font.css">-->
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png">
   <title>Nordic Outdoors | Adventure Tours In The North</title>
@@ -27,7 +28,7 @@
   </div>
     <header class="page-header">
       <div class="page-header__logo-container">
-        <img class="page-header__logo" src="img/logo-white.png" alt="main logo">
+        <img class="page-header__logo" src="https://i.ibb.co/njGtBfG/logo-white.png" alt="main logo">
       </div>
 
       <div class="page-header__main-title-container">
@@ -64,9 +65,28 @@
           </div>
           <div class="col-1-of-2">
             <div class="composition">
-              <img src="https://i.ibb.co/zf5V1Kd/nord-1.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
-              <img src="https://i.ibb.co/WyZ0YNY/nord-2.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
-              <img src="https://i.ibb.co/xDr9WXy/nord-3.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+
+              <img srcset="https://i.ibb.co/8XL6C9L/nord-1-small.webp 300w, https://i.ibb.co/zf5V1Kd/nord-1.jpg 1280w" 
+                sizes="(max-width: 900px) 14vw, (max-width: 600px) 23vw, 300px" 
+                alt="Photo 1" 
+                class="composition__photo composition__photo--p1"
+                src="https://i.ibb.co/zf5V1Kd/nord-1.jpg"
+              >
+
+              <img srcset="https://i.ibb.co/ZXgvkBL/nord-2-small.webp 300w, https://i.ibb.co/WyZ0YNY/nord-2.jpg 1280w"
+                sizes="(max-width: 900px) 14vw, (max-width: 600px) 23vw, 300px" 
+                alt="Photo 2"
+                class="composition__photo composition__photo--p2" 
+                src="https://i.ibb.co/WyZ0YNY/nord-2.jpg"
+              >
+
+              <img srcset="https://i.ibb.co/Fnj2dRN/nord-3-small.webp 300w, https://i.ibb.co/xDr9WXy/nord-3.jpg 1280w"
+                sizes="(max-width: 900px) 14vw, (max-width: 600px) 23vw, 300px" 
+                alt="Photo 3"
+                class="composition__photo composition__photo--p3"
+                src="https://i.ibb.co/xDr9WXy/nord-3.jpg"
+              >
+
             </div>
           </div>
         </div>
@@ -100,7 +120,7 @@
         <div class="col-1-of-4">
           <div class="feature-box">
             <i class="feature-box__icon icon-basic-map"></i>
-            <h3 class="terciary-title u-margin-bottom-small">Find your adventure</h3>
+            <h3 class="terciary-title u-margin-bottom-small">Find your Tour</h3>
             <p class="feature-box__text">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur laboriosam, ex facilis modi ipsum enim
               laudantium necessitatibus.
@@ -256,7 +276,12 @@
         <div class="row">
           <div class="review">
             <figure class="review__shape">
-              <img class="review__image" src="https://i.ibb.co/3WbRrcF/nord-8.jpg" alt="Person on Tour">
+
+
+
+              <img class="review__image" src="https://i.ibb.co/7nQQCy9/nord-8-small.webp" alt="Person on Tour">
+
+
               <figcaption class="review__caption">John Thomas</figcaption>
             </figure>
             <div class="review__text">
@@ -271,7 +296,11 @@
         <div class="row">
           <div class="review">
             <figure class="review__shape">
-              <img class="review__image" src="https://i.ibb.co/PzVCCw3/nord-9.jpg" alt="Person on Tour">
+
+
+              <img class="review__image" src="https://i.ibb.co/6btZYxW/nord-9-small.webp" alt="Person on Tour">
+
+
               <figcaption class="review__caption">Ann Williams</figcaption>
             </figure>
             <div class="review__text">
@@ -301,12 +330,12 @@
                   </h2>
                 </div>
                 <div class="form__group">
-                  <input type="text" class="form__input" placeholder="Full Name" id="name" required>
+                  <input id="name" type="text" class="form__input" placeholder="Full Name" required>
                   <label for="name" class="form__label">Full Name</label>
                 </div>
 
                 <div class="form__group">
-                  <input type="email" class="form__input" placeholder="Email Address" id="email" required>
+                  <input id="email" type="email" class="form__input" placeholder="Email Address" required>
                   <label for="email" class="form__label">Email Address</label>
                 </div>
 
@@ -339,7 +368,7 @@
 
     <footer class="footer">
       <div class="footer__logo-box">
-        <img class="footer__logo" src="img/logo-blue.png" alt="footer logo">
+        <img class="footer__logo" src="https://i.ibb.co/G5XKFfN/logo-blue.png" alt="footer logo">
       </div>
       <div class="row">
         <div class="col-1-of-2">
@@ -364,8 +393,8 @@
     <div class="modal" id="modal">
       <div class="modal__content">
         <div class="modal__left">
-          <img class="modal__image" src="https://i.ibb.co/3WbRrcF/nord-8.jpg" alt="Tour Picture">
-          <img class="modal__image" src="https://i.ibb.co/PzVCCw3/nord-9.jpg" alt="Tour Picture">
+          <img class="modal__image" src="https://i.ibb.co/Mcpyhgn/nord-8-medium.webp" alt="Tour Picture">
+          <img class="modal__image" src="https://i.ibb.co/10fzZgP/nord-9-medium.webp" alt="Tour Picture">
         </div>
         <div class="modal__right">
           <a href="#section-tours" class="modal__close">&times;</a>
