Made some image size changes

--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
     <div class="modal" id="modal">
       <div class="modal__content">
         <div class="modal__left">
-          <img class="modal__image" src="https://i.ibb.co/Mcpyhgn/nord-8-medium.webp" alt="Tour Picture">
-          <img class="modal__image" src="https://i.ibb.co/10fzZgP/nord-9-medium.webp" alt="Tour Picture">
+          <img class="modal__image" src="https://i.ibb.co/7nQQCy9/nord-8-small.webp" alt="Tour Picture">
+          <img class="modal__image" src="https://i.ibb.co/6btZYxW/nord-9-small.webp" alt="Tour Picture">
         </div>
         <div class="modal__right">
           <a href="#section-tours" class="modal__close">&times;</a>
